[project]
name = "agenticlanggraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "asyncio>=3.4.3",
    "faiss-cpu>=1.7.4",
    "httpx>=0.25.0",
    "ipykernel>=6.20.0",
    "jupyter>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.1.8",
    "langchain-groq>=0.3.5",
    "langchain-openai>=0.2.0",
    "langchain-tavily>=0.2.6",
    "langgraph>=0.2.0",
    "langgraph-cli[inmem]>=0.3.3",
    "langsmith>=0.4.4",
    "matplotlib>=3.10.3",
    "numpy>=1.24.0",
    "orjson>=3.10.0",
    "pandas>=2.0.0",
    "pydantic>=2.3,<3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit",
    "typing-extensions>=4.8.0",
    "wikipedia>=1.4.0",
]
